@@ -1,9 +1,12 @@
 package fi.dy.masa.malilib.util;
 
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import com.google.common.collect.ImmutableSet;
+
+import fi.dy.masa.malilib.MaLiLib;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
 
 import net.minecraft.block.BlockState;
@@ -11,80 +14,164 @@ import net.minecraft.block.ChestBlock;
 import net.minecraft.block.ShulkerBoxBlock;
 import net.minecraft.block.entity.BlockEntity;
 import net.minecraft.block.entity.ChestBlockEntity;
+import net.minecraft.block.entity.ShulkerBoxBlockEntity;
 import net.minecraft.block.enums.ChestType;
 import net.minecraft.client.MinecraftClient;
+import net.minecraft.component.*;
+import net.minecraft.component.type.BundleContentsComponent;
+import net.minecraft.component.type.ContainerComponent;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.inventory.DoubleInventory;
 import net.minecraft.inventory.Inventory;
 import net.minecraft.inventory.SimpleInventory;
 import net.minecraft.item.BlockItem;
+import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
+import net.minecraft.item.Items;
 import net.minecraft.nbt.NbtCompound;
-import net.minecraft.nbt.NbtList;
+import net.minecraft.registry.Registries;
+import net.minecraft.registry.entry.RegistryEntry;
 import net.minecraft.screen.PlayerScreenHandler;
 import net.minecraft.screen.ScreenHandler;
 import net.minecraft.screen.slot.Slot;
 import net.minecraft.screen.slot.SlotActionType;
+import net.minecraft.util.Identifier;
 import net.minecraft.util.collection.DefaultedList;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.World;
 
 public class InventoryUtils
 {
-    public static final ImmutableSet<String> DAMAGE_KEY = ImmutableSet.of("Damage");
+    public static final Set<DataComponentType<Integer>> DAMAGE_KEY = Set.of(DataComponentTypes.DAMAGE);
     private static final DefaultedList<ItemStack> EMPTY_LIST = DefaultedList.of();
+    public static final Pattern PATTERN_ITEM_BASE = Pattern.compile("^(?<name>(?:[a-z0-9\\._-]+:)[a-z0-9\\._-]+)$");
 
     /**
-     * @return true if the stacks are identical otherwise, but ignoring the stack size
+     * @return true if the stacks are identical, including their "Components"
      */
     public static boolean areStacksEqual(ItemStack stack1, ItemStack stack2)
     {
-        return ItemStack.canCombine(stack1, stack2);
+        return areStacksAndNbtEqual(stack1, stack2);
     }
 
     /**
-     * @return true if the stacks are identical otherwise, but ignoring the stack size,
+     * @return true if the stacks are identical, including their "Components"
+     */
+    public static boolean areStacksAndNbtEqual(ItemStack stack1, ItemStack stack2)
+    {
+        return ItemStack.areItemsAndComponentsEqual(stack1, stack2);
+    }
+
+    /**
+     * @return true if the stacks are identical, but ignoring the Components
+     */
+    public static boolean areStacksEqualIgnoreNbt(ItemStack stack1, ItemStack stack2)
+    {
+        return ItemStack.areItemsEqual(stack1, stack2);
+    }
+
+    /**
+     * @return true if the stacks are identical, but ignoring the stack size,
      * and if the item is damageable, then ignoring the damage too.
      */
     public static boolean areStacksEqualIgnoreDurability(ItemStack stack1, ItemStack stack2)
     {
-        if (ItemStack.areItemsEqual(stack1, stack2) == false)
+        if (!ItemStack.areItemsEqual(stack1, stack2))
         {
             return false;
         }
 
-        NbtCompound tag1 = stack1.getNbt();
-        NbtCompound tag2 = stack2.getNbt();
+        ComponentMap tag1 = stack1.getComponents();
+        ComponentMap tag2 = stack2.getComponents();
 
         if (tag1 == null || tag2 == null)
         {
             return tag1 == tag2;
         }
 
-        if (stack1.isDamageable() == false && stack2.isDamageable() == false)
+        if (!stack1.isDamageable() && !stack2.isDamageable())
         {
             return Objects.equals(tag1, tag2);
         }
 
-        return areNbtEqualIgnoreKeys(tag1, tag2, DAMAGE_KEY);
+        return areNbtEqualIgnoreKeys(tag1, tag2, DataComponentTypes.DAMAGE, DAMAGE_KEY);
     }
 
-    public static boolean areNbtEqualIgnoreKeys(NbtCompound tag1, NbtCompound tag2, Set<String> ignoredKeys)
+    /**
+     * Uses new ComponentMap to compare values
+     * @param tag1 (ComponentMap 1)
+     * @param tag2 (ComponentMap 2)
+     * @param type (DataComponentType) [OPTIONAL]
+     * @param ignoredKeys (keys to ignore) [OPTIONAL]
+     * @return (return value)
+     * @param <T> DataComponentType extendable
+     */
+    public static <T> boolean areNbtEqualIgnoreKeys(@Nonnull ComponentMap tag1, @Nonnull ComponentMap tag2, @Nullable DataComponentType<T> type, @Nullable Set<DataComponentType<T>> ignoredKeys)
     {
-        Set<String> keys1 = tag1.getKeys();
-        Set<String> keys2 = tag2.getKeys();
+        Set<DataComponentType<?>> keys1;
+        Set<DataComponentType<?>> keys2;
 
-        keys1.removeAll(ignoredKeys);
-        keys2.removeAll(ignoredKeys);
+        keys1 = tag1.getTypes();
+        keys2 = tag2.getTypes();
 
-        if (Objects.equals(keys1, keys2) == false)
+        if (ignoredKeys != null)
+        {
+            keys1.removeAll(ignoredKeys);
+            keys2.removeAll(ignoredKeys);
+        }
+
+        if (!Objects.equals(keys1, keys2))
+        {
+            return false;
+        }
+
+        if (type == null)
+        {
+            for (DataComponentType<?> key : keys1)
+            {
+                if (!Objects.equals(tag1.get(key), tag2.get(key)))
+                {
+                    return false;
+                }
+            }
+
+            return true;
+        }
+        else
+        {
+            return Objects.equals(tag1.get(type), tag2.get(type));
+        }
+    }
+
+    /**
+     * Same as above, but still intended to compare NbtCompounds
+     * @param tag1 (NbtCompound tag1)
+     * @param tag2 (NbtCompound tag2)
+     * @param ignoredKeys (Keys to ignore) [OPTIONAL]
+     * @return (result)
+     */
+    public static boolean areNbtEqualIgnoreKeys(@Nonnull NbtCompound tag1, @Nonnull NbtCompound tag2, @Nullable Set<String> ignoredKeys)
+    {
+        Set<String> keys1;
+        Set<String> keys2;
+
+        keys1 = tag1.getKeys();
+        keys2 = tag2.getKeys();
+
+        if (ignoredKeys != null)
+        {
+            keys1.removeAll(ignoredKeys);
+            keys2.removeAll(ignoredKeys);
+        }
+
+        if (!Objects.equals(keys1, keys2))
         {
             return false;
         }
 
         for (String key : keys1)
         {
-            if (Objects.equals(tag1.get(key), tag2.get(key)) == false)
+            if (!Objects.equals(tag1.get(key), tag2.get(key)))
             {
                 return false;
             }
@@ -102,6 +189,8 @@ public class InventoryUtils
     public static void swapSlots(ScreenHandler container, int slotNum, int hotbarSlot)
     {
         MinecraftClient mc = MinecraftClient.getInstance();
+        assert mc.interactionManager != null;
+        //MaLiLib.printDebug("swapSlots(): syncId {}, slotNum {}, hotbarSlot {}, swap", container.syncId, slotNum, hotbarSlot);
         mc.interactionManager.clickSlot(container.syncId, slotNum, hotbarSlot, SlotActionType.SWAP, mc.player);
     }
 
@@ -167,7 +256,7 @@ public class InventoryUtils
         {
             Slot slot = container.slots.get(slotNum);
 
-            if ((isPlayerInv == false || isRegularInventorySlot(slot.id, false)) &&
+            if ((!isPlayerInv || isRegularInventorySlot(slot.id, false)) &&
                 areStacksEqualIgnoreDurability(slot.getStack(), stackReference))
             {
                 return slot.id;
@@ -187,10 +276,11 @@ public class InventoryUtils
     public static boolean swapItemToMainHand(ItemStack stackReference, MinecraftClient mc)
     {
         PlayerEntity player = mc.player;
+        assert player != null;
         boolean isCreative = player.isCreative();
 
         // Already holding the requested item
-        if (areStacksEqual(stackReference, player.getMainHandStack()))
+        if (areStacksEqualIgnoreNbt(stackReference, player.getMainHandStack()))
         {
             return false;
         }
@@ -198,6 +288,7 @@ public class InventoryUtils
         if (isCreative)
         {
             player.getInventory().addPickBlock(stackReference);
+            assert mc.interactionManager != null;
             mc.interactionManager.clickCreativeStack(player.getMainHandStack(), 36 + player.getInventory().selectedSlot); // sendSlotPacket
             return true;
         }
@@ -208,6 +299,8 @@ public class InventoryUtils
             if (slot != -1)
             {
                 int currentHotbarSlot = player.getInventory().selectedSlot;
+                assert mc.interactionManager != null;
+                //MaLiLib.printDebug("swapItemToMainHand(): syncId {}, slot {}, currentHotbarSLot {}, swap", player.playerScreenHandler.syncId, slot, currentHotbarSlot);
                 mc.interactionManager.clickSlot(player.playerScreenHandler.syncId, slot, currentHotbarSlot, SlotActionType.SWAP, mc.player);
                 return true;
             }
@@ -229,7 +322,7 @@ public class InventoryUtils
         @SuppressWarnings("deprecation")
         boolean isLoaded = world.isChunkLoaded(pos);
 
-        if (isLoaded == false)
+        if (!isLoaded)
         {
             return null;
         }
@@ -284,17 +377,16 @@ public class InventoryUtils
      */
     public static boolean shulkerBoxHasItems(ItemStack stackShulkerBox)
     {
-        NbtCompound nbt = stackShulkerBox.getNbt();
+        ComponentMap data = stackShulkerBox.getComponents();
 
-        if (nbt != null && nbt.contains("BlockEntityTag", Constants.NBT.TAG_COMPOUND))
+        if (data != null && data.contains(DataComponentTypes.CONTAINER))
         {
-            NbtCompound tag = nbt.getCompound("BlockEntityTag");
+            ContainerComponent itemContainer = data.get(DataComponentTypes.CONTAINER);
 
-            if (tag.contains("Items", Constants.NBT.TAG_LIST))
-            {
-                NbtList tagList = tag.getList("Items", Constants.NBT.TAG_COMPOUND);
-                return tagList.size() > 0;
-            }
+            if (itemContainer != null)
+                return itemContainer.stream().findAny().isPresent();
+            else
+                return false;
         }
 
         return false;
@@ -309,33 +401,25 @@ public class InventoryUtils
      */
     public static DefaultedList<ItemStack> getStoredItems(ItemStack stackIn)
     {
-        NbtCompound nbt = stackIn.getNbt();
+        ComponentMap data = stackIn.getComponents();
 
-        if (nbt != null && nbt.contains("BlockEntityTag", Constants.NBT.TAG_COMPOUND))
+        if (data != null && data.contains(DataComponentTypes.CONTAINER))
         {
-            NbtCompound tagBlockEntity = nbt.getCompound("BlockEntityTag");
+            ContainerComponent itemContainer = data.get(DataComponentTypes.CONTAINER);
 
-            if (tagBlockEntity.contains("Items", Constants.NBT.TAG_LIST))
+            if (itemContainer != null)
             {
-                DefaultedList<ItemStack> items = DefaultedList.of();
-                NbtList tagList = tagBlockEntity.getList("Items", Constants.NBT.TAG_COMPOUND);
-                final int count = tagList.size();
+                DefaultedList<ItemStack> items = EMPTY_LIST;
 
-                for (int i = 0; i < count; ++i)
-                {
-                    ItemStack stack = ItemStack.fromNbt(tagList.getCompound(i));
-
-                    if (stack.isEmpty() == false)
-                    {
-                        items.add(stack);
-                    }
-                }
+                itemContainer.copyTo(items);
 
                 return items;
             }
+            else
+                return EMPTY_LIST;
         }
-
-        return DefaultedList.of();
+        else
+            return EMPTY_LIST;
     }
 
     /**
@@ -348,6 +432,73 @@ public class InventoryUtils
      */
     public static DefaultedList<ItemStack> getStoredItems(ItemStack stackIn, int slotCount)
     {
+        ComponentMap data = stackIn.getComponents();
+
+        if (data != null && data.contains(DataComponentTypes.CONTAINER))
+        {
+            ContainerComponent itemContainer = data.get(DataComponentTypes.CONTAINER);
+
+            if (itemContainer != null)
+            {
+                DefaultedList<ItemStack> items = EMPTY_LIST;
+
+                //final long count = itemContainer.method_57489().count();
+                //int count = 0;
+                //int maxSlot = -1;
+
+                Iterator<ItemStack> iter = itemContainer.iterator();
+
+                if (slotCount <= 0)
+                {
+                    Item itemIn = stackIn.getItem();
+                    if (itemIn instanceof BlockItem && ((BlockItem) itemIn).getBlock() instanceof ShulkerBoxBlock)
+                        slotCount = ShulkerBoxBlockEntity.INVENTORY_SIZE;
+                    else
+                        slotCount = 27;
+
+                    for (int i = 0; i < slotCount; i++)
+                    {
+                        if (iter.hasNext())
+                        {
+                            items.add(iter.next());
+                        }
+                        else
+                        {
+                            items.add(ItemStack.EMPTY);
+                        }
+                    }
+
+                    return items;
+                }
+                // FIXME Slot handling seems to have been removed,
+                //  so we'll use it to define the "size" ...
+                else if (slotCount < 54)
+                {
+                    for (int i = 0; i < slotCount; i++)
+                    {
+                        if (iter.hasNext())
+                        {
+                            items.add(iter.next());
+                        }
+                        else
+                        {
+                            items.add(ItemStack.EMPTY);
+                        }
+                    }
+
+                    return items;
+                }
+                else
+                    return EMPTY_LIST;
+            }
+            else
+                return EMPTY_LIST;
+        }
+        else
+            return EMPTY_LIST;
+    }
+
+        /*
         NbtCompound nbt = stackIn.getNbt();
 
         if (nbt != null && nbt.contains("BlockEntityTag", Constants.NBT.TAG_COMPOUND))
@@ -384,7 +535,7 @@ public class InventoryUtils
                     ItemStack stack = ItemStack.fromNbt(tag);
                     int slot = tag.getByte("Slot");
 
-                    if (slot >= 0 && slot < items.size() && stack.isEmpty() == false)
+                    if (slot >= 0 && slot < items.size() && !stack.isEmpty())
                     {
                         items.set(slot, stack);
                     }
@@ -394,6 +545,70 @@ public class InventoryUtils
             }
         }
 
+        return EMPTY_LIST;
+
+         */
+
+    public static boolean bundleHasItems(ItemStack stack)
+    {
+        ComponentMap data = stack.getComponents();
+
+        if (data != null && data.contains(DataComponentTypes.BUNDLE_CONTENTS))
+        {
+            BundleContentsComponent bundleContainer = data.get(DataComponentTypes.BUNDLE_CONTENTS);
+
+            if (bundleContainer != null)
+                return bundleContainer.stream().findAny().isPresent();
+            else
+                return false;
+        }
+
+        return false;
+    }
+
+    public static int bundleCountItems(ItemStack stack)
+    {
+        ComponentMap data = stack.getComponents();
+
+        if (data != null && data.contains(DataComponentTypes.BUNDLE_CONTENTS))
+        {
+            BundleContentsComponent bundleContainer = data.get(DataComponentTypes.BUNDLE_CONTENTS);
+
+            if (bundleContainer != null)
+                return bundleContainer.getOccupancy();
+            else
+                return -1;
+        }
+
+        return -1;
+    }
+
+    public static DefaultedList<ItemStack> getBundleItems(ItemStack stackIn)
+    {
+        ComponentMap data = stackIn.getComponents();
+
+        if (data != null && data.contains(DataComponentTypes.BUNDLE_CONTENTS))
+        {
+            BundleContentsComponent bundleContainer = data.getOrDefault(DataComponentTypes.BUNDLE_CONTENTS, BundleContentsComponent.DEFAULT);
+
+            if (bundleContainer != null)
+            {
+                int maxSlots = bundleContainer.size();
+                DefaultedList<ItemStack> items = EMPTY_LIST;
+
+                for (int i = 0; i < maxSlots; i++)
+                {
+
+                    ItemStack slot = bundleContainer.get(i);
+
+                    if (!slot.isEmpty())
+                        items.add(slot);
+                }
+
+                return items;
+            }
+            return EMPTY_LIST;
+        }
         return EMPTY_LIST;
     }
 
@@ -410,7 +625,7 @@ public class InventoryUtils
 
         for (ItemStack stack : items)
         {
-            if (stack.isEmpty() == false)
+            if (!stack.isEmpty())
             {
                 map.addTo(new ItemType(stack), stack.getCount());
             }
@@ -435,7 +650,7 @@ public class InventoryUtils
         {
             ItemStack stack = inv.getStack(slot);
 
-            if (stack.isEmpty() == false)
+            if (!stack.isEmpty())
             {
                 map.addTo(new ItemType(stack, false, true), stack.getCount());
 
@@ -471,5 +686,99 @@ public class InventoryUtils
         }
 
         return inv;
+    }
+
+    /**
+     * Creates an ItemStack via a String
+     * @param itemNameIn (String containing the item name)
+     * @return (The ItemStack object or ItemStack.EMPTY, aka Air)
+     */
+    public static ItemStack getItemStackFromString(String itemNameIn)
+    {
+        return getItemStackFromString(itemNameIn, -1, ComponentMap.EMPTY);
+    }
+
+    /**
+     * Creates an ItemStack via a String
+     * @param itemNameIn (String containing the item name)
+     * @param data (ComponentMap data to import)
+     * @return (The ItemStack object or ItemStack.EMPTY, aka Air)
+     */
+    public static ItemStack getItemStackFromString(String itemNameIn, ComponentMap data)
+    {
+        return getItemStackFromString(itemNameIn, -1, data);
+    }
+
+    /**
+     * Creates an ItemStack via a String
+     * @param itemNameIn (String containing the item name)
+     * @param count (How many in this stack)
+     * @return (The ItemStack object or ItemStack.EMPTY, aka Air)
+     */
+    public static ItemStack getItemStackFromString(String itemNameIn, int count)
+    {
+        return getItemStackFromString(itemNameIn, count, ComponentMap.EMPTY);
+    }
+
+    /**
+     * Creates an ItemStack via a String
+     * @param itemNameIn (String containing the item name)
+     * @param count (How many in this stack)
+     * @param data (ComponentMap data to import)
+     * @return (The ItemStack object or ItemStack.EMPTY, aka Air)
+     */
+    public static ItemStack getItemStackFromString(String itemNameIn, int count, ComponentMap data)
+    {
+        if (itemNameIn.isEmpty() || itemNameIn.equals("empty") || itemNameIn.equals("minecraft:air"))
+        {
+            return ItemStack.EMPTY;
+        }
+        else
+        {
+            Matcher matcherBase = PATTERN_ITEM_BASE.matcher(itemNameIn);
+            String itemName;
+
+            if (matcherBase.matches())
+            {
+                itemName = matcherBase.group("name");
+
+                if (itemName != null)
+                {
+                    Identifier itemId = new Identifier(itemName);
+                    Item item = Registries.ITEM.get(itemId);
+                    RegistryEntry<Item> itemEntry = RegistryEntry.of(item);
+
+                    MaLiLib.printDebug("InventoryUtils#getItemStackFromString(): id {}, item {}, entry {}", itemId.toString(), item.toString(), itemEntry.toString());
+
+                    if (item != Items.AIR && itemEntry.hasKeyAndValue())
+                    {
+                        if (count < 0 && data.isEmpty())
+                        {
+                            return new ItemStack(itemEntry);
+                        }
+                        else if (data.isEmpty())
+                        {
+                            return new ItemStack(itemEntry, count);
+                        }
+                        else if (count < 0)
+                        {
+                            ItemStack result = new ItemStack(itemEntry);
+                            result.applyComponentsFrom(data);
+
+                            return result;
+                        }
+                        else
+                        {
+                            ItemStack result = new ItemStack(itemEntry, count);
+                            result.applyComponentsFrom(data);
+
+                            return result;
+                        }
+                    }
+                }
+            }
+        }
+
+        return ItemStack.EMPTY;
     }
 }
